--- a/briar-android/src/main/res/layout/list_item_transport.xml
+++ b/briar-android/src/main/res/layout/list_item_transport.xml
@@ -2,17 +2,19 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:gravity="center_horizontal"
+	android:orientation="vertical"
 	android:padding="@dimen/margin_small"
-	android:gravity="center_horizontal">
+	tools:ignore="UseCompoundDrawables">
 
 	<ImageView
 		android:id="@+id/imageView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:padding="@dimen/margin_small"
+		tools:ignore="ContentDescription"
 		tools:src="@drawable/transport_tor"/>
 
 	<TextView
