--- a/briar-android/src/main/res/layout/list_item_group_member.xml
+++ b/briar-android/src/main/res/layout/list_item_group_member.xml
@@ -1,58 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:layout_marginLeft="@dimen/listitem_horizontal_margin"
-	android:layout_marginStart="@dimen/listitem_horizontal_margin"
-	android:paddingTop="@dimen/margin_medium">
+	android:layout_height="wrap_content">
 
 	<org.briarproject.briar.android.view.AuthorView
 		android:id="@+id/authorView"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_alignParentStart="true"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentTop="true"
-		android:layout_marginBottom="@dimen/margin_small"
-		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
-		android:layout_marginRight="@dimen/listitem_horizontal_margin"
-		android:layout_toStartOf="@+id/bulbView"
-		android:layout_toLeftOf="@+id/bulbView"
+		android:layout_margin="@dimen/margin_medium"
+		app:layout_constraintEnd_toStartOf="@+id/bulbView"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
 		app:persona="list"/>
 
 	<ImageView
 		android:id="@+id/bulbView"
 		android:layout_width="16dp"
 		android:layout_height="16dp"
-		android:layout_alignBottom="@+id/authorView"
-		android:layout_alignParentEnd="true"
-		android:layout_alignParentRight="true"
-		android:layout_alignTop="@+id/authorView"
-		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
-		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		android:layout_margin="@dimen/margin_medium"
+		app:layout_constraintBottom_toTopOf="@+id/divider"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:ignore="ContentDescription"
 		tools:src="@drawable/contact_connected"/>
 
 	<TextView
 		android:id="@+id/creatorView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/authorView"
-		android:layout_marginBottom="@dimen/margin_small"
-		android:layout_marginLeft="@dimen/listitem_group_member_indentation"
-		android:layout_marginStart="@dimen/listitem_group_member_indentation"
+		android:layout_marginLeft="40dp"
+		android:layout_marginStart="40dp"
+		android:layout_marginTop="@dimen/margin_small"
 		android:text="@string/groups_member_created_you"
 		android:textColor="?android:attr/textColorSecondary"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/authorView"
 		tools:visibility="visible"/>
 
 	<View
 		android:id="@+id/divider"
 		style="@style/Divider.ContactList"
-		android:layout_below="@+id/creatorView"
-		android:layout_marginStart="@dimen/listitem_group_member_indentation"
-		android:layout_marginLeft="@dimen/listitem_group_member_indentation"
-		android:layout_marginTop="@dimen/margin_medium"/>
+		android:layout_marginLeft="36dp"
+		android:layout_marginStart="36dp"
+		android:layout_marginTop="@dimen/margin_medium"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/creatorView"/>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
