--- a/briar-android/src/main/res/layout/power_view.xml
+++ b/briar-android/src/main/res/layout/power_view.xml
@@ -11,9 +11,9 @@
 		android:id="@+id/textView"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="8dp"
-		android:paddingLeft="@dimen/margin_large"
-		android:paddingRight="@dimen/margin_large"
+		android:layout_marginEnd="@dimen/margin_large"
+		android:layout_marginStart="@dimen/margin_large"
+		android:layout_marginTop="@dimen/margin_medium"
 		android:textSize="@dimen/text_size_medium"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
 		android:id="@+id/checkImage"
 		android:layout_width="24dp"
 		android:layout_height="24dp"
-		android:layout_margin="8dp"
+		android:layout_margin="@dimen/margin_medium"
 		android:src="@drawable/ic_check_white"
 		android:visibility="invisible"
 		app:layout_constraintBottom_toBottomOf="@+id/button"
@@ -38,7 +38,7 @@
 		style="@style/BriarButton"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_margin="8dp"
+		android:layout_margin="@dimen/margin_medium"
 		app:layout_constraintEnd_toStartOf="@+id/helpButton"
 		app:layout_constraintStart_toEndOf="@+id/checkImage"
 		app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -49,7 +49,7 @@
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="24dp"
 		android:layout_height="24dp"
-		android:layout_margin="8dp"
+		android:layout_margin="@dimen/margin_medium"
 		android:contentDescription="@string/help"
 		android:src="@drawable/ic_help_outline_white"
 		android:tint="@color/briar_button_text_positive"
