--- a/briar-android/src/main/res/layout/unread_message_button.xml
+++ b/briar-android/src/main/res/layout/unread_message_button.xml
@@ -16,7 +16,8 @@
 		android:id="@+id/unreadCountView"
 		android:layout_width="wrap_content"
 		android:layout_height="@dimen/unread_bubble_size"
-		android:layout_gravity="right|top"
+		android:layout_gravity="right|end|top"
+		android:layout_marginEnd="5dp"
 		android:layout_marginRight="5dp"
 		android:layout_marginTop="10dp"
 		android:background="@drawable/bubble"
