--- a/briar-android/src/main/res/layout/toolbar.xml
+++ b/briar-android/src/main/res/layout/toolbar.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.AppBarLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	tools:context="org.briarproject.briar.android.navdrawer.NavDrawerActivity">
 
 	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
