--- a/briar-android/src/main/res/layout/list_item_group_join_notice.xml
+++ b/briar-android/src/main/res/layout/list_item_group_join_notice.xml
@@ -21,10 +21,11 @@
 
 	<org.briarproject.briar.android.view.AuthorView
 		android:id="@+id/author"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/margin_medium"
 		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/text"
 		app:persona="commenter"/>
 
