--- a/briar-android/src/main/res/layout/fragment_blog_post.xml
+++ b/briar-android/src/main/res/layout/fragment_blog_post.xml
@@ -5,7 +5,7 @@
 	android:layout_height="match_parent">
 
 	<FrameLayout
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:descendantFocusability="beforeDescendants"
 		android:focusable="true"
@@ -17,7 +17,7 @@
 			android:id="@+id/postLayout"
 			style="@style/BriarCard"
 			layout="@layout/list_item_blog_post"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"/>
 
 		<ProgressBar
