--- a/briar-android/src/main/res/layout/list_item_blog_post.xml
+++ b/briar-android/src/main/res/layout/list_item_blog_post.xml
@@ -30,8 +30,11 @@
 			android:id="@+id/authorView"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_margin="@dimen/listitem_vertical_margin"
-			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginBottom="@dimen/listitem_horizontal_margin"
+			android:layout_marginEnd="@dimen/listitem_vertical_margin"
+			android:layout_marginStart="@dimen/listitem_vertical_margin"
+			android:layout_marginTop="@dimen/listitem_vertical_margin"
+			app:layout_constraintEnd_toStartOf="@+id/commentView"
 			app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/rebloggerView"/>
