Update translations, adds Hungarian, sets inclusion threshold to 80%

--- a/briar-android/src/main/res/values/arrays.xml
+++ b/briar-android/src/main/res/values/arrays.xml
@@ -40,6 +40,7 @@
 		<item>gl</item>
 		<item>he</item>
 		<item>hi</item>
+		<item>hu</item>
 		<item>it</item>
 		<item>ja</item>
 		<item>ms</item>
