--- a/briar-android/src/main/res/layout/fragment_setup_password.xml
+++ b/briar-android/src/main/res/layout/fragment_setup_password.xml
@@ -71,6 +71,7 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:hint="@string/confirm_password"
+				android:imeOptions="actionNext"
 				android:inputType="textPassword"
 				android:maxLines="1"/>
 		</android.support.design.widget.TextInputLayout>
